deploy/internal/pihole/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:2025.11.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: pihole-etc-pv
              mountPath: "/etc/pihole"
            - name: pihole-dns-pv
              mountPath: "/etc/dnsmasq.d"
        - name: unbound
          image: mvance/unbound-rpi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5335
              name: dns-udp
              protocol: UDP
            - containerPort: 5335
              name: dns-tcp
              protocol: TCP
          volumeMounts:
            - name: unbound-config
              mountPath: /opt/unbound/etc/unbound/unbound.conf
              subPath: unbound.conf
              readOnly: true
      volumes:
        - name: pihole-etc-pv
          persistentVolumeClaim:
            claimName: pihole-etc
        - name: pihole-dns-pv
          persistentVolumeClaim:
            claimName: pihole-dns
        - name: unbound-config
          configMap:
            name: unbound-config
