deploy/internal/pihole/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  serviceName: pihole-lb
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:2025.11.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: pihole-etc-pv
              mountPath: "/etc/pihole"
            - name: pihole-dns-pv
              mountPath: "/etc/dnsmasq.d"
        - name: unbound
          image: mvance/unbound:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5335
              protocol: UDP
            - containerPort: 5335
              protocol: TCP
          volumeMounts:
            - name: unbound-conf
              mountPath: /opt/unbound/etc/unbound/unbound.conf
              subPath: unbound.conf
      volumes:
        - name: pihole-etc-pv
          persistentVolumeClaim:
            claimName: pihole-etc
        - name: pihole-dns-pv
          persistentVolumeClaim:
            claimName: pihole-dns
        - name: unbound-conf
          configMap:
            name: unbound-conf
